--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,16 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+.divForm {
+  display: flex;
+  justifyContent: space-between;
+  gap: 20px;
+}
+
+.result{
+  marginTop: 40px;
+}
+
 @keyframes logo-spin {
   from {
     transform: rotate(0deg);
